<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:layout_marginLeft="20dp"
              android:layout_marginRight="20dp"
              android:layout_marginTop="20dp">

        <SeekBar android:id="@+id/seekbar_glide_cap"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginTop="30dp">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="@color/glide"
                  android:drawableStart="@drawable/ic_glide"
                  android:text="@string/glide_label"
                  android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                  android:layout_marginRight="10dp"
                  android:layout_marginLeft="10dp"/>

        <TextView android:id="@+id/text_view_glide_cap"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="@color/glide"
                  android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

    </LinearLayout>
</LinearLayout>
