<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~     FloatSight
  ~     Copyright 2018 Thomas Hirsch
  ~     https://github.com/84n4n4/FloatSight
  ~
  ~     This file is part of FloatSight.
  ~     FloatSight is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     FloatSight is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with FloatSight.  If not, see <https://www.gnu.org/licenses/>.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <item
            android:id="@+id/menu_item_set_range_marker"
            android:icon="@drawable/range"
            android:title="@string/menu_item_set_range_marker"
            app:showAsAction="always"
            tools:ignore="AlwaysShowAction"
            android:enabled="false"/>
    <item
            android:id="@+id/menu_item_crop_range"
            android:icon="@drawable/cut"
            android:title="@string/menu_item_crop_range"
            app:showAsAction="always"
            tools:ignore="AlwaysShowAction"
            android:enabled="false"/>
    <item
            android:id="@+id/menu_item_discard_markers"
            android:icon="@drawable/discard"
            android:title="@string/menu_item_discard_markers"
            app:showAsAction="always"
            tools:ignore="AlwaysShowAction"
            android:enabled="false"/>
    <item
            android:id="@+id/menu_item_x_axis"
            android:orderInCategory="100"
            android:title="@string/menu_item_x_axis"
            app:showAsAction="never" />
    <item
            android:id="@+id/menu_item_y_axis"
            android:orderInCategory="100"
            android:title="@string/menu_item_y_axis"
            app:showAsAction="never" />
    <item
            android:id="@+id/menu_item_cap_glide"
            android:orderInCategory="100"
            android:title="@string/menu_item_cap_glide"
            app:showAsAction="never" />
    <item
            android:id="@+id/menu_item_units"
            android:orderInCategory="100"
            android:title="@string/menu_item_units"
            app:showAsAction="never" />
</menu>