<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~     FloatSight
  ~     Copyright 2018 Thomas Hirsch
  ~     https://github.com/84n4n4/FloatSight
  ~
  ~     This file is part of FloatSight.
  ~     FloatSight is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     FloatSight is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with FloatSight.  If not, see <https://www.gnu.org/licenses/>.
  ~
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".chartfragments.AllMetricsChartFragment"
                                             tools:showIn="@layout/activity_main">

    <FrameLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:id="@+id/root_chart_view">
    </FrameLayout>

</android.support.constraint.ConstraintLayout>